# metabeak

./: Cargo.toml  LICENSE.txt  NOTICE  README.md
doc/: decisions.md  development.md  features.md  manual.md  operation.md
etc/: recreate_db.sql  reset_db.sh  schema.sql
samples/: hello.js
samples/events/: simple.json
samples/handlers/: counter.js  echo.js  nothing.js  stackoverflow.js
src/: database.rs  local.rs  main.rs  service.rs  util.rs
src/agents/crossref/: metadata_agent.rs
src/api/: mod.rs  model.rs
src/db/: agents.rs  entity.rs  event.rs  handler.rs  metadata.rs  mod.rs  pool.rs  source.rs
src/event_extraction/: crossref.rs  mod.rs  service.rs
src/execution/: mod.rs  model.rs  run.rs
src/metadata_assertion/: mod.rs  service.rs
src/metadata_assertion/crossref/: metadata.rs  metadata_agent.rs  mod.rs  works_api_client.rs
src/metadata_assertion/retrieve/: doi.rs  mod.rs  ror.rs
testing/: soak-test.sh
testing/unit/: crossref-1.json  crossref-book.json
testing/unit/crossref/: author-ror.json
