[package]
name = "pardalotus_metabeak"
description = ""
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metabeak"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
logger = "0.4.0"
retry = "2.0.0"
scholarly_identifiers = "0.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serial_test = "3.2.0"
sha1 = "0.10.6"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "macros",
] }
structopt = "0.3.26"
time = { version = "0.3.36", features = ["parsing", "formatting", "serde"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
v8 = "130.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
backon = "1.2.0"
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["json", "multipart"] }
axum-extra = { version = "0.9.6", features = ["erased-json"] }
